<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.restaurant.activities.ReservationEditActivity">
    <ProgressBar
        android:id="@+id/edit_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


        <ScrollView
            android:id="@+id/edit_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reservation_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_label" />

                <Button
                    android:id="@+id/date_details"
                    style="?android:textAppearanceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    android:text="@string/date_time_details" />

                <Button
                    android:id="@+id/table_details"
                    style="?android:textAppearanceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    android:text="@string/table_details" />

                <Button
                    android:id="@+id/dishes_details"
                    style="?android:textAppearanceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:onClick="onButtonClick"
                    android:text="@string/select_dishes" />

                <Button
                    android:id="@+id/make_reservation"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="onButtonClick"
                    android:text="@string/make_reservation"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancel_reservation"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="onButtonClick"
                    android:text="@string/cancel_reservation"
                    android:textStyle="bold" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    app:srcCompat="@android:drawable/ic_dialog_email" />
            </LinearLayout>
        </ScrollView>

</android.support.constraint.ConstraintLayout>
